--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cloudinary": "^1.0.12",
     "express-handlebars": "^1.1.0",
     "handlebars": "^2.0.0",
-    "node-sass": "^2.1.1",
+    "node-sass": "*",
     "node-sass-middleware": "^0.5.0",
     "dotenv": "^1.1.0"
   },
