--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "keystone": "^0.3.11",
     "async": "^0.9.0",
-    "underscore": "^1.8.0",
-    "moment": "^2.8.1",
     "cloudinary": "^1.0.12",
+    "dotenv": "^1.1.0",
     "express-handlebars": "^1.1.0",
     "handlebars": "^2.0.0",
+    "keystone": "^0.3.11",
+    "moment": "^2.8.1",
+    "mongoose": "^3.8.23",
     "node-sass": "*",
     "node-sass-middleware": "^0.5.0",
-    "dotenv": "^1.1.0"
+    "underscore": "^1.8.0"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
