--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "handlebars": "^2.0.0",
     "keystone": "^0.3.11",
     "moment": "^2.8.1",
-    "mongoose": "^3.8.23",
-    "node-sass": "*",
+    "node-sass": "^3.3.3",
     "node-sass-middleware": "^0.5.0",
     "underscore": "^1.8.0"
   },
