--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "keystone": "^0.3.11",
     "moment": "^2.8.1",
     "node-sass": "^3.3.3",
-    "node-sass-middleware": "^0.5.0",
-    "underscore": "^1.8.0"
+    "node-sass-middleware": "^0.9.6",
+    "underscore": "^1.8.0",
+    "gulp-sass": "^2.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
@@ -30,7 +31,7 @@
     "time-grunt": "^0.3.1"
   },
   "engines": {
-    "node": ">=0.10.22",
+    "node": ">=0.12.7",
     "npm": ">=1.3.14"
   },
   "scripts": {
