--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keystone_test",
+  "name": "thetoiletseatproject",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
@@ -9,27 +9,8 @@
     "express-handlebars": "^1.1.0",
     "handlebars": "^2.0.0",
     "keystone": "^0.3.11",
-    "moment": "^2.8.1",
-    "node-sass": "^3.3.3",
-    "node-sass-middleware": "^0.9.6",
-    "underscore": "^1.8.0",
-    "gulp-sass": "^2.0.0"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.4",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-jshint": "^0.7.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-express-server": "^0.4.17",
-    "grunt-node-inspector": "^0.1.5",
-    "grunt-nodemon": "^0.2.1",
-    "grunt-sass": "^1.0.0",
-    "jshint-stylish": "^0.1.3",
-    "load-grunt-configs": "^0.4.1",
-    "load-grunt-tasks": "^0.4.0",
-    "open": "0.0.5",
-    "time-grunt": "^0.3.1"
-  },
+    "moment": "^2.8.1"
+  }
   "engines": {
     "node": ">=0.12.7",
     "npm": ">=1.3.14"
