--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-node-inspector": "^0.1.5",
     "grunt-nodemon": "^0.2.1",
     "grunt-sass": "^1.0.0",
+    "gulp-sass": "^2.0.4",
     "jshint-stylish": "^0.1.3",
     "load-grunt-configs": "^0.4.1",
     "load-grunt-tasks": "^0.4.0",
@@ -34,7 +35,8 @@
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "node keystone.js"
+    "start": "node keystone.js",
+    "postinstall": "npm rebuild gulp-sass node-sass; # BUGFIX gulp libsass bindings not found error - https://github.com/dlmanning/gulp-sass/issues/174"
   },
   "main": "keystone.js"
 }
