--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "handlebars": "^2.0.0",
     "keystone": "^0.3.11",
     "moment": "^2.8.1",
-    "node-sass": "^2.1.1",
     "node-sass-middleware": "^0.5.0",
     "underscore": "^1.8.0"
   },
@@ -34,8 +33,8 @@
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "node keystone.js",
-    "preinstall": "npm rebuild grunt-sass node-sass"
+    "preinstall": "npm rebuild node-sass",
+    "start": "node keystone.js"
   },
   "main": "keystone.js"
 }
