--- a/package.json
+++ b/package.json
@@ -3,13 +3,38 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "async": "^0.9.0",
+    "cloudinary": "^1.0.12",
+    "dotenv": "^1.1.0",
+    "express-handlebars": "^1.1.0",
+    "handlebars": "^2.0.0",
+    "keystone": "^0.3.11",
+    "moment": "^2.8.1",
+    "node-sass": "^2.1.1",
+    "node-sass-middleware": "^0.5.0",
+    "underscore": "^1.8.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.4",
+    "grunt-concurrent": "^0.5.0",
+    "grunt-contrib-jshint": "^0.7.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express-server": "^0.4.17",
+    "grunt-node-inspector": "^0.1.5",
+    "grunt-nodemon": "^0.2.1",
+    "grunt-sass": "^1.0.0",
+    "jshint-stylish": "^0.1.3",
+    "load-grunt-configs": "^0.4.1",
+    "load-grunt-tasks": "^0.4.0",
+    "open": "0.0.5",
+    "time-grunt": "^0.3.1"
   },
   "engines": {
     "node": ">=0.12",
     "npm": ">=3.8.12"
   },
   "scripts": {
-    "preinstall": "npm uninstall node-sass",
+    "postinstall": "npm rebuild node-sass",
     "start": "node keystone.js"
   },
   "main": "keystone.js"
